删除作者信息

--- a/hzcf-demo-master/src/main/resources/generator.properties
+++ b/hzcf-demo-master/src/main/resources/generator.properties
@@ -1,17 +1,17 @@
-#\u4ee3\u7801\u751f\u6210\u5668\uff0c\u914d\u7f6e\u4fe1\u606f
+#代码生成器，配置信息
 
 
-#\u5305\u540d
+#包名
 package=io.renren
-#\u4f5c\u8005
-author=chenshun
+#作者
+author=FYP
 #Email
-email=sunlightcs@gmail.com
-#\u8868\u524d\u7f00(\u7c7b\u540d\u4e0d\u4f1a\u5305\u542b\u8868\u524d\u7f00)
+email=fengyupeng@huizhongcf.com
+#表前缀(类名不会包含表前缀)
 tablePrefix=
 
 
-#\u7c7b\u578b\u8f6c\u6362\uff0c\u914d\u7f6e\u4fe1\u606f
+#类型转换，配置信息
 tinyint=Integer
 smallint=Integer
 mediumint=Integer
